Partial fix for "log in"/"log out" alignment problem in Firefox
Use floats for the list items rather than inline display, thus working
around the alignment discrepancy in Firefox.

Unfortanately this introduces a new problem in both browsers, and that
is that the "log in"/"log out" links are no longer right-aligned, which
doesn't look very good and also clashes with the search box.

I am going to try and fix that issue; if not, will have to revert.

--- a/app/views/sass/display.sass
+++ b/app/views/sass/display.sass
@@ -161,6 +161,7 @@ a.mailto:after
   font-size:          0.9em
   font-weight:        bold
   background:         #83837d url(../images/navbar-bg.png) left top repeat-x
+  height:             11px
   margin:             0em
   padding:
     top:              1em
@@ -169,8 +170,10 @@ a.mailto:after
     background:       url(../images/navbar-selected.png) left top repeat-x
     color:            white
     text-decoration:  underline
+  > li
+    float: left
+    list-style-type: none
   li
-    display:          inline
     > ul
       display:        none
     li
